<resources>
    <string name="app_name">Ecommerce App</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="join_now">Join Now</string>
    <string name="find_discover_choose_amp_buy_anything"><![CDATA[Find, Discover, Choose & Buy Anything]]></string>
    <string name="app_logo">App Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_to_e_commerce_app">Login To E-Commerce App As A Customer</string>
    <string name="login_to_e_commerce_app_as_admin">Login To E-Commerce App As An Admin</string>
    <string name="remember_me">Remember Me</string>
    <string name="i_m_an_admin">I\'m An Admin</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="i_am_an_admin">I Am An Admin</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_new_account">Create New Account</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="admin">Admin?</string>
    <string name="admin_email">admin</string>
    <string name="admin_password">admin</string>
    <string name="customer">Customer?</string>
    <string name="add_new_product">Add New Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_price">Product Price</string>
    <string name="product_image">Product image</string>
    <string name="upload_product">Upload Product</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="add_item_to_cart_cart">Add Item To Cart Cart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">Close</string>
    <string name="update">Update</string>
    <string name="change_profile">Change Profile</string>
    <string name="address">Address</string>
    <string name="quantity">quantity: 5</string>
    <string name="total_price">Total Price</string>
    <string name="buy_now">Buy Now</string>
    <string name="transaction_done_successfully">Transaction Done Successfully</string>
    <string name="transaction_successful">Transaction Successful</string>
    <string name="shipment_details">Shipment Details</string>
    <string name="city_name">City Name</string>
    <string name="home_address">Home Address</string>
    <string name="confirm">Confirm</string>
    <string name="successful">Successful</string>
    <string name="order_time_jan_25_2020_14_00_pm">Order Time: Jan 25, 2020, 14:00 PM</string>
    <string name="status">Status:</string>
    <string name="pending">Pending</string>
    <string name="order_id">Order ID:</string>
    <string name="order_amount">Order Amount:</string>
    <string name="location_icon">Location Icon</string>
    <string name="transaction_id">Transaction ID:</string>
    <string name="_2643_crest_view_terrace_new_york_usa">2643 Crest View Terrace, New York, USA</string>
    <string name="ship">Ship</string>
    <string name="products">Products:</string>
    <string name="check_new_orders">Check New Orders</string>
    <string name="state">State</string>
    <string name="shipped">Shipped</string>
    <string name="search">Search</string>
    <string name="edit_products">Edit Products</string>
    <string name="edit_existing_products">Edit Existing Products</string>
    <string name="delete_this_product">Delete This Product</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="increase_item_count">Increase Item Count</string>
    <string name="decrease_item_count">Decrease Item Count</string>
    <string name="location">Location</string>
    <string name="category_image">Category Image</string>
    <string name="t_shirts">T-Shirts</string>
    <string name="sports_clothes">Sports Clothes</string>
    <string name="female_clothes">Female Clothes</string>
    <string name="jackets">Jackets</string>
    <string name="glasses">Glasses</string>
    <string name="hats">Hats</string>
    <string name="bags">Bags</string>
    <string name="shoes">Shoes</string>
    <string name="headphones">Headphones</string>
    <string name="laptops">Laptops</string>
    <string name="accessories">Accessories</string>
    <string name="phones">Phones</string>
    <string name="how_many_pieces">How Many Pieces?</string>
    <string name="home">Home</string>
</resources>