<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ShipmentFragment"
        android:layout_margin="@dimen/_8sdp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shipment_details"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/username_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                app:met_floatingLabel="normal"
                android:hint="@string/username"
                android:inputType="text" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                app:met_floatingLabel="normal"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/phone_number_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                app:met_floatingLabel="normal"
                android:inputType="phone"
                android:hint="@string/phone_number" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/city_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                app:met_floatingLabel="normal"
                android:hint="@string/city_name"
                android:inputType="text" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/home_address_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                app:met_floatingLabel="normal"
                android:hint="@string/home_address"
                android:inputType="text" />

        </LinearLayout>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:backgroundTint="@color/deep_sky_blue"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>
</layout>