<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/bar_layout" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/toolbar"
            android:src="@drawable/applogo"
            android:contentDescription="@string/app_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/logo"
            android:gravity="center_horizontal"
            android:padding="@dimen/_10sdp"
            tools:ignore="ExtraText">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_to_e_commerce_app"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/email_login_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                app:met_floatingLabel="normal"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password_login_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                app:met_floatingLabel="normal"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <CheckBox
                    android:id="@+id/remember_me_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true" />


                <TextView
                    android:id="@+id/forgot_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:backgroundTint="@color/pink"
                android:text="@string/login"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_am_an_admin"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_gravity="end"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground" />
        </LinearLayout>

    </RelativeLayout>
</layout>