<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/teal_700">


    <ImageView
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_120sdp"
        android:src="@drawable/applogo"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_discover_choose_amp_buy_anything"
        android:layout_centerInParent="true"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_margin="@dimen/_16sdp"
        android:textStyle="bold"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_btn"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:textColor="@color/white"
        android:backgroundTint="@color/pink"
        android:text="@string/join_now"/>


    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:text="@string/already_have_an_account"/>

</RelativeLayout>