<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AdminCategory">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_6sdp">


                <ImageView
                    android:id="@+id/product_image"
                    android:layout_width="@dimen/_240sdp"
                    android:layout_height="@dimen/_200sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:src="@drawable/select_product_image"
                    android:contentDescription="@string/product_image" />


                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:met_floatingLabel="normal"
                    android:hint="@string/product_name" />


                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/product_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:met_floatingLabel="normal"
                    android:hint="@string/product_description" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/product_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:met_floatingLabel="normal"
                    android:hint="@string/product_price"
                    android:inputType="number" />

                <Button
                    android:id="@+id/upload_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/upload_product" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </FrameLayout>
</layout>