<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_4sdp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_8sdp"
        android:foreground="?attr/selectableItemBackground"
        tools:ignore="UnusedAttribute">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/product_placeholder"
                android:contentDescription="@string/product_image" />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/product_image"
                android:textSize="18sp"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:singleLine="true"
                android:text="@string/product_name"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_name"
                android:layout_toEndOf="@id/product_image"
                android:layout_marginStart="@dimen/_4sdp"
                android:textColor="@android:color/darker_gray"
                android:text="@string/quantity" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/quantity"
                android:layout_toEndOf="@id/product_image"
                android:layout_marginStart="@dimen/_4sdp"
                android:textColor="@android:color/darker_gray"
                android:text="@string/product_price"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</layout>